egonlang-core/res/examples/invalid/type_alias_invalid_identifier_underscore.eg
type Number_List = list<number>;

// out: SyntaxError: type aliases are required to be PascalCase: `Number_List`
